--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,192 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+<!--    new colors-->
+    <color name="color_primary_dark">#3700B3</color>
+    <color name="color_accent">#03DAC5</color>
+    <color name="charleston_green">#2D2D2D</color>
+    <color name="manatee">#9496A3</color>
+    <color name="manatee_t10">#1A9496A3</color>
+    <color name="picton_blue">#3DC3EA</color>
+    <color name="violet_blue">#333DC3EA</color>
+    <color name="ogre_odor">#F84932</color>
+    <color name="ogre_odor_75">#12F84932</color>
+    <color name="rich_black">#090E18</color>
+    <color name="activity_background">#0B1220</color>
+    <color name="activity_background_blur">#000B1220</color>
+    <color name="dark_gunmetal">#191F2D</color>
+    <color name="spring_green">#02E99D</color>
+    <color name="woodsmoke">#15151A</color>
+    <color name="charade">#20222D</color>
+    <color name="jet">#3C3139</color>
+    <color name="dark_slate_gray">#24544E</color>
+    <color name="spring_green_t75">#BF02E99D</color>
+    <color name="spring_green_t7">#1202E99D</color>
+    <color name="fire_opal">#EB5757</color>
+    <color name="nav_color">#111627</color>
+    <color name="dark_jungle_green">#0A2229</color>
+    <color name="heather">#B1BFCD</color>
+    <color name="light_grey">#FFFEFE</color>
+    <color name="black_t0">#00000000</color>
+    <color name="black_t20">#33000000</color>
+    <color name="black_t40">#66000000</color>
+    <color name="black_t50">#80000000</color>
+    <color name="black_t75">#BF000000</color>
+    <color name="black_t70">#B3000000</color>
+    <color name="black_t80">#CC000000</color>
+    <color name="black_t100">#000000</color>
+    <color name="eerie_black_t94">#F0121728</color>
+    <color name="eerie_black">#121728</color>
+    <color name="oslo_gray">#85888F</color>
+    <color name="tundora">#464646</color>
+    <color name="white_t60">#99FFFFFF</color>
+    <color name="white_t50">#80FFFFFF</color>
+    <color name="white_t40">#66FFFFFF</color>
+    <color name="white_t75">#BFFFFFFF</color>
+    <color name="white_t70">#B3FFFFFF</color>
+    <color name="white_t80">#CCFFFFFF</color>
+    <color name="white_t90">#E6FFFFFF</color>
+    <color name="white_t14">#24FFFFFF</color>
+    <color name="white_t10">#1AFFFFFF</color>
+    <color name="white_t7">#12FFFFFF</color>
+    <color name="red_t81">#CFEF0000</color>
+    <color name="cardinal">#D12625</color>
+    <color name="cape_code">#484A4A</color>
+    <color name="shark">#20232B</color>
+    <color name="whisper_t60">#99EBEBF5</color>
+    <color name="nero">#292929</color>
+    <color name="nero_t80">#CC292929</color>
+    <color name="tuna">#303542</color>
+    <color name="tuna_12">#1F303542</color>
+    <color name="tangaroa">#070B13</color>
+    <color name="dusty_gray">#9C9C9C</color>
+    <color name="jewel">#186C3A</color>
+    <color name="chinese_black">#0B0E18</color>
+    <color name="silver_sand">#C5C5C5</color>
+    <color name="ghost">#C2C3C5</color>
+    <color name="spanish_gray">#959595</color>
+    <color name="shady_lady">#979797</color>
+    <color name="gold">#D1B000</color>
+    <color name="arsenic">#363A48</color>
+    <color name="davys_grey">#5B5B5B</color>
+    <color name="old_server">#868686</color>
+    <color name="black_rock">#2E303B</color>
+    <color name="black">#000000</color>
+    <color name="midnight_express">#1F2334</color>
+    <color name="bmc_seekbar_played">#3DC3EA</color>
+    <color name="bmc_seekbar_buffered">#60A3B5</color>
+    <color name="bmc_seekbar_track">#80FFFFFF</color>
+    <color name="philippine_silver">#B6B6B6</color>
+    <color name="dark_jungle">#111929</color>
+    <color name="jasmine">#FFE27B</color>
+    <color name="dark_liver">#4F4F4F</color>
+    <color name="spiro_disco_ball">#0AC8FF</color>
+    <color name="cool_grey">#8790A4</color>
+    <color name="lavender_gray">#BEC6D8</color>
+    <color name="independence">#51596B</color>
+    <color name="american_green">#34BF43</color>
+    <color name="haiti">#171D2B</color>
+    <color name="button_blue">#22A1E9 </color>
+    <color name="lotion">#FCFCFB</color>
+    <color name="black_russian">#1E1F22</color>
+    <color name="auro_metal_saurus">#6C7483</color>
+    <color name="medium_sea_green">#2FB665</color>
+    <color name="malachite">#01D957</color>
+    <color name="blue_violet">#773DD9</color>
+    <color name="dark_pink">#E34D75</color>
+    <color name="midnight_moss">#030303</color>
+    <color name="onyx">#363646</color>
+    <color name="firefly">#171D2A</color>
+    <color name="jasper">#D94444</color>
+    <color name="outer_space">#2C2C3D</color>
+    <color name="rangitoto">#25252D</color>
+    <color name="bright_gray">#383D48</color>
+    <color name="mandarin">#EF8647</color>
+    <color name="charcoal">#2C3340</color>
+    <color name="roman_silver">#818795</color>
+    <color name="santa_grey">#9CA0A7</color>
+    <color name="chinese_silver">#CCCCCC</color>
+    <color name="almost_black">#030307</color>
+    <color name="vampire_grey">#4A4C5C</color>
+    <color name="quill_grey">#D2D2D4</color>
+    <color name="bright_sea_green">#1BFDB3</color>
+    <color name="baltic_sea">#2A2A34</color>
+    <color name="ship_grey">#3C3C48</color>
+    <color name="green_white">#E9E9E9</color>
+    <color name="gondola">#191920</color>
+    <color name="pale_silver">#C1C1C1</color>
+    <color name="periwinkle_grey">#CBD1DD</color>
+    <color name="carolina_blue">#A8B4D0</color>
+    <color name="crayola">#323548</color>
+    <color name="jet_grey">#65677C</color>
+    <color name="leafy_green">#3DCD4B</color>
+    <color name="cadet_grey">#9CA3AF</color>
+    <color name="bleached_cedar">#23242B</color>
+    <color name="ebony_clay">#23232E</color>
+    <color name="mobster">#7B7B82</color>
+    <color name="cerulean">#21A1F6</color>
+    <color name="zeus">#1D1D1D</color>
+    <color name="wild_blue_yonder">#8791AA</color>
+    <color name="bright_grey">#31394B</color>
+    <color name="baltic_sea_dark">#24242D</color>
+    <color name="rangoon_green">#1C1D26</color>
+    <color name="french_grey">#C0C0C0</color>
+    <color name="bronco">#A0A0A0</color>
+    <color name="transparent">#00000000</color>
+    <color name="transparent_90">#90000000</color>
+    <color name="bluish_grey">#7F7F9A</color>
+    <color name="fountain_blue">#4BAEEF</color>
+    <color name="grey_chateau">#9EA4B2</color>
+    <color name="fuchsia_blue">#7C3DD4</color>
+    <color name="bashful_pink">#CA488C</color>
+    <color name="friar_grey">#818181</color>
+    <color name="shuttle_grey">#5F5F6B</color>
+    <color name="light_grey_blue">#1AA8B8DB</color>
+    <color name="blue_bayoux">#4C5772</color>
+    <color name="timberwolf">#D4D4D4</color>
+    <color name="dark_mirage">#1D1D24</color>
+    <color name="racing_green">#121213</color>
+    <color name="silver_chalice">#A6A6A6</color>
+    <color name="spring_rain">#BDBDBD</color>
+    <color name="iridium">#3D3E45</color>
+    <color name="midnight_moss_black">#33000108</color>
+    <color name="outer_space_tuna">#31313E</color>
+    <color name="river_bed">#4F4F5C</color>
+    <color name="jaguar_black">#000108</color>
+    <color name="boulder">#7A7A7A</color>
+    <color name="gravel">#48484D</color>
+    <color name="dark_baltic_sea">#21212B</color>
+    <color name="concord">#7D7D87</color>
+    <color name="dark_seafoam">#18B774</color>
+    <color name="zombie_green">#5BD167</color>
+    <color name="woody_smoky_black">#0F0F0F</color>
+    <color name="ship_grey_tuna">#3C3C4A</color>
+    <color name="onyx_night">#0E0E11</color>
+    <color name="gondola_green">#1B1B1B</color>
+    <color name="fuscous_grey">#555360</color>
+    <color name="pale_sky">#78788B</color>
+    <color name="scarlet">#BE1515</color>
+    <color name="gravel_black">#3E3E49</color>
+    <color name="light_carmine_pink">#D26C6C</color>
+    <color name="gunmetal_ebony_clay">#2E2E3E</color>
+    <color name="gable_green">#172935</color>
+    <color name="eucalyptus">#1C8562</color>
+    <color name="star_dust_grey">#9E9EA1</color>
+    <color name="smoky_almost_black">#FA0E0E0E</color>
+    <color name="crater_brown">#502727</color>
+    <color name="bole">#773B3B</color>
+    <color name="shamrock_green">#16AB40</color>
+    <color name="bluish_cyan">#0E161B</color>
+    <color name="pale_gray">#22232B</color>
+    <color name="baltic_sea_heavy_dark">#252525</color>
+    <color name="heavy_metal">#29292D</color>
+    <color name="granite_grey">#7E7E7E</color>
+    <color name="dark_mirage_green">#222222</color>
+    <color name="gull_grey">#9DA6B1</color>
+    <color name="battleship_grey">#80848B</color>
+    <color name="dark_oil_green">#1F1F1F</color>
+    <color name="raven_grey">#727D84</color>
+    <color name="regent_grey">#818B99</color>
 </resources>
